# physics-training

./: .gitignore  01.Basics.html  01.Basics.md  02.ConvexBodies.md  README.md
00-Start/: PhysicsRenderer.vcxproj
00-Start/code/: application.cpp
01-Basics/: Body.cpp  Body.h  Contact.cpp  Contact.h  Intersections.cpp  Intersections.h  PhysicsRenderer.vcxproj  PhysicsRenderer.vcxproj.filters  Shape.cpp  Shape.h
01-Basics/code/: Scene.cpp
02-ConvexBodies/: Intersections.cpp  Intersections.h  PhysicsRenderer.vcxproj  PhysicsRenderer.vcxproj.filters  Shape.cpp  Shape.h  ShapeUtils.cpp  ShapeUtils.h
02-ConvexBodies/code/: Scene.cpp  application.cpp
02-ConvexBodies/code/Renderer/: model.cpp
PhysicsEngine/01.BuildingShapes/: .gitignore  Scene03Cube.cpp  Scene05Bodies.cpp  Scene05Bodies.hpp
PhysicsEngine/01.BuildingShapes/gdraw/: Cube.cpp  Cube.hpp  Quad.hpp  Renderer.hpp  SphereCube.cpp  SphereCube.hpp  SphereCubeMesh.cpp
PhysicsEngine/01.Particles/: CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Scene01Clear.cpp  Scene01Clear.hpp  Scene02Quad.cpp  Scene02Quad.hpp  Scene03Cube.cpp  Scene03Cube.hpp  Scene04Sphere.cpp  Scene04Sphere.hpp  Window.cpp  Window.hpp
PhysicsEngine/01.Particles/gdraw/: Cube.hpp  (+22 more)
PhysicsEngine/02.GravityImpulse/: .gitignore  CMakeLists.txt  Locator.cpp  Locator.hpp  Main.cpp  Scene.hpp  Scene05Bodies.cpp  Scene05Bodies.hpp
PhysicsEngine/02.GravityImpulse/gassets/: AssetsManager.cpp  AssetsManager.hpp  CMakeLists.txt  GpuUploader.cpp  GpuUploader.hpp
PhysicsInOneX/02-ConvexBodies/: GJK.cpp  GJK.h  Shape.cpp  Shape.h
(+60 files in other folders)
